Appli prete pour demo avec portrait bloqué